--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
 
 
-  <script src="http://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
+  <script src="js/particles.min.js"></script>
   <script src="js/index.js"></script>
 
 
