--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>LB With Love!!</title>
+  <title>LB !!</title>
 
   <meta property="og:title" content="LB With Love!" />
   <meta property="og:description"  content="LB With Love!" />
